--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Photo Blog</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     
   </head>
   <body>
